Finished ui table; added CORS to api

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,10 @@ services:
     environment:
       - FLASK_ENV=development
     command: python api.py
+
+  ui:
+    build: ./ui
+    volumes:
+      - ./ui:/usr/share/nginx/html
+    ports:
+      - "8080:80"
